--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:20 AM</p>
                 <hr>
-                <img class="img-responsive" src="file:///C:/Users/WeCanCodeIT/Desktop/Bootstrap/index.html" alt="">
+                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
                 <hr>
                 <p>My first web page was for a Tuscany Villa rental business.  I made it so it is totally responsive to the screen size that is being used to view the site.</p>
                 <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -98,7 +98,7 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:45 PM</p>
                 <hr>
-                <img class="img-responsive" src="file:///C:/Users/WeCanCodeIT/Desktop/Bootstrap/Magic8Ball/magic8Ball.html" alt="">
+                <img class="img-responsive" src="http://placehold.it/900x300" href="https://github.com/LawTodd/tuscany-villa" alt="https://github.com/LawTodd/tuscany-villa">
                 <hr>
                 <p>This was just a simple page to paractice using Java Script to animate an image an generate a random answer.</p>
                 <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -114,7 +114,7 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:55 PM</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                <img class="img-responsive" src="http://placehold.it/900x300" href="https://github.com/LawTodd/FortuneTeller" alt="https://github.com/LawTodd/FortuneTeller">
                 <hr>
                 <p>This is a simple java program to generate a random fortune depending on the answers you give to the questions that it ask you.</p>
                 <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
