another try at fixing links

--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
 
                 <!-- First Blog Post -->
                 <h2>
-                    <a href="#">Todd's Websites</a>
+                    <a href="#">Todd's Website</a>
                 </h2>
                 <p class="lead">
                     by <a href="index.php">Todd Law</a>
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:20 AM</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="https://lawtodd.github.io/tuscany-villa" href="https://lawtodd.github.io/tuscany-villa">
+                <img class="img-responsive" src="http://placehold.it/900x300" alt="https://github.com/lawtodd/tuscany-villa" href="https://github.com/lawtodd/tuscany-villa">
                 <hr>
                 <p>My first web page was for a Tuscany Villa rental business.  I made it so it is totally responsive to the screen size that is being used to view the site.</p>
-                <a class="btn btn-primary" href="https://lawtodd.github.io/tuscany-villa">Tuscany Villa<span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://github.com/lawtodd/tuscany-villa">Tuscany Villa<span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
