--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:45 PM</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" href="https://github.com/LawTodd/tuscany-villa" alt="https://github.com/LawTodd/tuscany-villa">
+                <img class="img-responsive" src="http://placehold.it/900x300" href="https://github.com/LawTodd/Magic8Ball" alt="https://github.com/LawTodd/Magic8Ball">
                 <hr>
                 <p>This was just a simple page to paractice using Java Script to animate an image an generate a random answer.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://github.com/LawTodd/Magic8Ball">Magic 8 Ball <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
                 <!-- Third Blog Post -->
                 <h2>
-                    <a href="#">Todd's fortune Teller</a>
+                    <a href="#">Todd's Fortune Teller</a>
                 </h2>
                 <p class="lead">
                     by <a href="index.php">Todd Law</a>
@@ -117,7 +117,7 @@
                 <img class="img-responsive" src="http://placehold.it/900x300" href="https://github.com/LawTodd/FortuneTeller" alt="https://github.com/LawTodd/FortuneTeller">
                 <hr>
                 <p>This is a simple java program to generate a random fortune depending on the answers you give to the questions that it ask you.</p>
-                <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://github.com/LawTodd/FortuneTeller">Fortune Teller<span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
