--- a/AboutMe.html
+++ b/AboutMe.html
@@ -75,7 +75,7 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:20 AM</p>
                 <hr>
-                <img class="img-responsive" src="Todd in Bangkok.jpg" alt="Todd in Bangkok">
+                <img class="img-responsive" src="Todd in Bangkok (1).jpg" alt="Todd in Bangkok">
                 <hr>
                 <p>I have spent decades working as a Mainframe programmer mainly working in COBOL, DB/2, JCL, VSAM, and Assembler using TSO/ISPF, Changeman, Quality Center, Debug, and Fault Analyzer.</p>
                 
