fixed js folder

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- my sites JavaScript-->
-    <script src="blog.js"></script>
+    <script src="js/blog.js"></script>
 
 </body>
 
