added working Tuscany-Villa link

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="https://github.com/lawtodd/tuscany-villa" href="https://github.com/lawtodd/tuscany-villa">
                 <hr>
                 <p>My first web page was for a Tuscany Villa rental business.  I made it so it is totally responsive to the screen size that is being used to view the site.  It was built using a Bootstrap HTML framework with lots of CSS.</p>
-                <a class="btn btn-primary" href="https://github.com/lawtodd/tuscany-villa">Tuscany Villa<span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://lawtodd.github.io/tuscany-villa/">Tuscany Villa<span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
