added 8 ball link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:20 AM</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="https://github.com/lawtodd/tuscany-villa" href="https://github.com/lawtodd/tuscany-villa">
+                <img class="img-responsive" src="http://placehold.it/900x300" alt="https://lawtodd.github.io/tuscany-villa/" href="https://lawtodd.github.io/tuscany-villa/">
                 <hr>
                 <p>My first web page was for a Tuscany Villa rental business.  I made it so it is totally responsive to the screen size that is being used to view the site.  It was built using a Bootstrap HTML framework with lots of CSS.</p>
                 <a class="btn btn-primary" href="https://lawtodd.github.io/tuscany-villa/">Tuscany Villa<span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -98,10 +98,10 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:45 PM</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" href="https://github.com/LawTodd/Magic8Ball" alt="https://github.com/LawTodd/Magic8Ball">
+                <img class="img-responsive" src="http://placehold.it/900x300" href="https://lawtodd.github.io/Magic8Ball/" alt="https://lawtodd.github.io/Magic8Ball/">
                 <hr>
                 <p>This was just a simple page to paractice using Java Script to animate the random shaking of the Magic 8 Ball image after you click on it and generate a random answer.  While it is shaking the image, it displays a message that says "The Magic 8 Ball is searching for your answer!"  Once it stops shaking, it shows your answer for 3 seconds before it switches back to the original instruction message.</p>
-                <a class="btn btn-primary" href="https://github.com/LawTodd/Magic8Ball">Magic 8 Ball <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://lawtodd.github.io/Magic8Ball/">Magic 8 Ball <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
