--- a/AboutMe.html
+++ b/AboutMe.html
@@ -75,7 +75,50 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:20 AM</p>
                 <hr>
-                <img class="img-responsive" src="Todd in Bangkok (1).jpg" alt="Todd in Bangkok">
+
+                <!--carrousel of pictures-->
+                <div class="container-liquid">
+                    <br>
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                            <li data-target="#myCarousel" data-slide-to="3"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="MachuPicchu.jpg" alt="Peru" width="100%" height="345">
+                            </div>
+
+                            <div class="item">
+                                <img src="Todd&Wall&Sign.jpg" alt="China" width="100%" height="345">
+                            </div>
+
+                            <div class="item">
+                                <img src="Todd@TreviFountain.jpg" alt="Rome" width="100%" height="345">
+                            </div>
+
+                            <div class="item">
+                                <img src="ToddinBangkok.jpg" alt="Bangkok" width="100%" height="345">
+                            </div>
+                        </div>
+
+                        <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+
                 <hr>
                 <p>I was born in Reynoldsburg Ohio and graduated from The Ohio State University with a Bachelors of Science in Computer Information Sciences.</p>
                 <p></p>
@@ -118,31 +161,10 @@
 
                 <!-- Blog Categories Well -->
                 <div class="well">
-                    <h4>Blog Categories</h4>
+                    <h4>Github Repositories</h4>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /.col-lg-6 -->
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
                             </ul>
                         </div>
                         <!-- /.col-lg-6 -->
@@ -182,6 +204,9 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- AJAX gets-->
+    <script src="js/blog.js"></script>
 
 </body>
 
