--- a/AboutMe.html
+++ b/AboutMe.html
@@ -68,12 +68,12 @@
 
                 <!-- First Blog Post -->
                 <h2>
-                    <a href="#">Todd's Website</a>
+                    <a href="#">A Brief History of Todd</a>
                 </h2>
                 <p class="lead">
                     by <a href="index.php">Todd Law</a>
                 </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:20 AM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on March 4, 2017 at 10:02 AM</p>
                 <hr>
 
                 <!--carrousel of pictures-->
