--- a/AboutMe.html
+++ b/AboutMe.html
@@ -41,7 +41,7 @@
                         <a href="https://lawtodd.github.io">Home</a>
                     </li>
                     <li>
-                        <a href="#">Resume</a>
+                        <a href="resume.html">Resume</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
