--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a href="AboutMe.html">About Me</a>
                     </li>
                     <li>
-                        <a href="#">Resume</a>
+                        <a href="Resume.html">Resume</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
