--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
                         <a href="https://lawtodd.github.io">Home</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
