changed to Virtual Pet

--- a/index.html
+++ b/index.html
@@ -107,17 +107,17 @@
 
                 <!-- Third Blog Post -->
                 <h2>
-                    <a href="#">Todd's Fortune Teller</a>
+                    <a href="#">Todd's Virtual Pet</a>
                 </h2>
                 <p class="lead">
                     by <a href="index.php">Todd Law</a>
                 </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on March 2, 2017 at 11:55 PM</p>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on March 5, 2017 at 11:05 PM</p>
                 <hr>
-                <img class="img-responsive" src="http://placehold.it/900x300" href="https://github.com/LawTodd/FortuneTeller" alt="https://github.com/LawTodd/FortuneTeller">
+                <img class="img-responsive" src="virtualPet.jpg" href="https://github.com/LawTodd/VirtualPet" alt="https://github.com/LawTodd/VirtualPet">
                 <hr>
-                <p>This is a simple java program to generate a random fortune depending on the answers you give to the questions that it ask you.</p>
-                <a class="btn btn-primary" href="https://github.com/LawTodd/FortuneTeller">Fortune Teller<span class="glyphicon glyphicon-chevron-right"></span></a>
+                <p>This is a simple java program to create a Virtual Pet bird named Romeo.  Everytime you enter a command, there is a little bit of time passing so I have to update the attributes to make him Hungrier, Thirstier, Sleepier, more Bored, and more likely to poop!  When you start the program it allows you to enter a number between one and nine to indicate the speed at which time passes.  So you can enter a command to feed it, water it, play with it, or clean up after it.  It will automatically poop and go to sleep so you can't make it do those things.  If any of the attributes gets too high, Romeo will squak, to indicate that you have to do something.  When he poops, he says "SQUAK!  I made a Boom Boom!" and then the clean up indicator goes up.  When he goes to sleep he says "Beddy Bye time!" and you can't feed him or water him or play with him while he is asleep, and he will say "Don't bother me I'm Sleeping!" if you try to!</p>
+                <a class="btn btn-primary" href="https://github.com/LawTodd/VirtualPet">Virtual Pet<span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
