--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </p>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on May 6, 2017 at 1:27 PM</p>
                 <hr>
-                <img class="img-responsive" src="BackPackBridge.png" alt="https://lawtodd.github.io/Backpack-Bridge/" href="https://lawtodd.github.io/Backpack-Bridge/">
+                <img class="img-responsive" src="BackpackBridge.png" alt="https://lawtodd.github.io/Backpack-Bridge/" href="https://lawtodd.github.io/Backpack-Bridge/">
                 <hr>
                 <p>This was my capstone project for the WeCanCodeit bootcamp.  My team worked on it for three weeks.  
                 My job was to build in all of the security by setting up Signon Id's that allow separate levels of permission for each of the different subsystems.
